--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "hbs": "^4.2.0",
     "http-errors": "^2.0.0",
     "mongoose": "^6.9.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
