--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "http-errors": "^2.0.0",
     "mongoose": "^6.9.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
